--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding TypeScript</title>
+    <script src="analytics.js" defer></script>
+    <script src="app.js" defer></script>
   </head>
-  <body>
-   
-  </body>
-  <script src="app.js" defer></script>
+  <body></body>
 </html>
